trying to fix thingssss